--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,17 +24,16 @@
 
         {% if site.github.is_project_page %}
         <p class="view">
-          <a href="{{ site.github.repository_url }}">the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a><br>
-          <a href="https://twitter.com/GBR_data">My Twitter Profile </a><br>
-          <a href="https://bricaud.github.io/personal-blog">My blog </a><br>
-          <a href="https://github.com/bricaud">My Github </a>
-          <a href="https://bricaud.github.io/personal-blog">My blog </a><br>
-          <a href="https://scholar.google.fr/citations?user=muGuSyoAAAAJ">My Google scholar profile</a>
+          <a href="{{ site.github.repository_url }}">the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a>
         </p>
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a><br>
+          <a href="https://twitter.com/GBR_data">My Twitter Profile </a><br>
+          <a href="https://bricaud.github.io/personal-blog">My blog </a><br>
+          <a href="https://scholar.google.fr/citations?user=muGuSyoAAAAJ">My Google scholar profile</a>
+        </p>
         {% endif %}
 
         {% if site.show_downloads %}
