--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a><br>
-          <a href="https://twitter.com/GBR_data">My Twitter Profile </a><br>
-          <a href="https://bricaud.github.io/personal-blog">My blog </a><br>
-          <a href="https://scholar.google.fr/citations?user=muGuSyoAAAAJ">My Google scholar profile</a>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a><br>
+          <a href="https://twitter.com/GBR_data">Twitter Profile </a><br>
+          <a href="https://bricaud.github.io/personal-blog">Blog </a><br>
+          <a href="https://scholar.google.fr/citations?user=muGuSyoAAAAJ">Google Scholar Profile</a>
         </p>
         {% endif %}
 
